basic_ai_accelerator-main/final_iteration_hls/all_in_one/logs/hls_run_csim_8344.backup.log
  **** HLS Build v2024.2 5238294
INFO: [HLS 200-2005] Using work_dir C:/fpga/simon/all_in_one/all_in_one 
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'syn.file=systolic_array.cpp' from C:/fpga/simon/all_in_one/hls_config.cfg(10)
INFO: [HLS 200-10] Adding design file 'C:/fpga/simon/all_in_one/systolic_array.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=C:/fpga/simon/asic_accelerator/overall_tb.cpp' from C:/fpga/simon/all_in_one/hls_config.cfg(9)
INFO: [HLS 200-10] Adding test bench file 'C:/fpga/simon/asic_accelerator/overall_tb.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.top=systolic_top_uart_4parallel' from C:/fpga/simon/all_in_one/hls_config.cfg(7)
INFO: [HLS 200-1465] Applying ini 'flow_target=vivado' from C:/fpga/simon/all_in_one/hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'part=xczu2cg-sfvc784-1-e' from C:/fpga/simon/all_in_one/hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xczu2cg-sfvc784-1-e'
INFO: [HLS 200-1465] Applying ini 'csim.code_analyzer=1' from C:/fpga/simon/all_in_one/hls_config.cfg(8)
INFO: [HLS 200-1465] Applying ini 'package.output.format=ip_catalog' from C:/fpga/simon/all_in_one/hls_config.cfg(5)
INFO: [SIM 211-200] Executing Code Analyzer instead of classic HLS C simulation
INFO: [HLS 211-200] Compiling source code systolic_array.cpp as hardware code with instrumentation
INFO: [HLS 211-200] Compiling source code C:/fpga/simon/asic_accelerator/overall_tb.cpp as test bench code with instrumentation
INFO: [HLS 211-200] Compiling source code systolic_array.cpp as test bench code with instrumentation
systolic_array.cpp:34:27: error: conditional expression is ambiguous; 'ap_fixed<32, 12>' can be converted to 'ap_fixed<64 aka 64, 24 aka 24>' and vice versa
    return (x > (acc_t)0) ? x : (x * alpha);
                          ^ ~   ~~~~~~~~~~~
1 error generated.
slxcmd:0:0: warning: Non-zero exit code: 1 returned by 'INFO: [HLS 211-200] Compiling source code systolic_array.cpp as hardware code with instrumentation'
ERROR: [SIM 211-200] Code Analyzer execution failed. Consider running the classic C simulation instead by disabling the hls.csim.code_analyzer option in the config file.
ERROR: Problem running csim: child process exited abnormally
INFO: [HLS 200-112] Total CPU user time: 5 seconds. Total CPU system time: 2 seconds. Total elapsed time: 18.391 seconds; peak allocated memory: 619.902 MB.
